<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/viewGithub"
        android:title="@string/viewGithub">
    </item>
    <item
        android:id="@+id/actionToggleValues"
        android:title="@string/actionToggleValues">
    </item>
    <item
        android:id="@+id/actionToggleIcons"
        android:title="@string/actionToggleIcons">
    </item>
    <item
        android:id="@+id/actionToggleFilled"
        android:title="@string/actionToggleFilled">
    </item>
    <item
        android:id="@+id/actionToggleCircles"
        android:title="@string/actionToggleCircles">
    </item>
    <item
        android:id="@+id/actionToggleCubic"
        android:title="@string/actionToggleCubic">
    </item>
    <item
        android:id="@+id/actionToggleStepped"
        android:title="@string/actionToggleStepped">
    </item>
    <item
        android:id="@+id/actionToggleHorizontalCubic"
        android:title="@string/actionToggleHorizontalCubic">
    </item>
    <item
        android:id="@+id/actionTogglePinch"
        android:title="@string/actionTogglePinch">
    </item>
    <item
        android:id="@+id/actionToggleAutoScaleMinMax"
        android:title="@string/actionToggleAutoScale">
    </item>
    <item
        android:id="@+id/actionToggleHighlight"
        android:title="@string/actionToggleHighlight">
    </item>
    <item
        android:id="@+id/animateX"
        android:title="@string/animateX">
    </item>
        <item
        android:id="@+id/animateY"
        android:title="@string/animateY">
    </item>
            <item
        android:id="@+id/animateXY"
        android:title="@string/animateXY">
    </item>
    <item
        android:id="@+id/actionSave"
        android:title="@string/actionSave">
    </item>

</menu>
